# LanggraphPractice

./: .gitignore  pdf_extract.py  pyproject.toml  requirements.txt  use_vector_db.py
BasicChatbot/: 1-basicchatbot.ipynb  2-Chatbot.ipynb
