[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed",
    "groq",
    "langchain>=1.2.9",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "langsmith>=0.6.9",
    "pgvector",
    "phidata",
    "psycopg[binary]",
    "pypdf",
    "python-dotenv>=1.2.1",
    "sqlalchemy",
    "typer",
]
